Implement build-time compiling for runtime modules

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,11 @@ license = "MIT"
 [dependencies]
 anyhow = "1.0.81"
 clap = { version = "4.5.4", features = ["cargo", "wrap_help", "derive"] }
+glob = "0.3.1"
 mlua = { version = "0.9.6", features = ["luajit52", "serialize", "vendored"] }
 rustyline = "14.0.0"
 
 [build-dependencies]
+glob = "0.3.1"
+mlua = { version = "0.9.6", features = ["luajit52", "vendored"] }
 vergen = { version = "8.3.1", features = ["git", "git2", "cargo"] }
