--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,11 @@ license = "MIT"
 [dependencies]
 anyhow = "1.0.81"
 clap = { version = "4.5.4", features = ["cargo", "wrap_help", "derive"] }
-glob = "0.3.1"
+hostname = "0.4.0"
 mlua = { version = "0.9.6", features = ["luajit52", "serialize", "vendored"] }
 rustyline = "14.0.0"
+serde = { version = "1.0.197", features = ["derive"] }
+serde_json = "1.0"
 
 [build-dependencies]
 glob = "0.3.1"
