Add logging with lua API and flatten module structure

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,10 @@ license = "MIT"
 [dependencies]
 anyhow = "1.0.81"
 clap = { version = "4.5.4", features = ["cargo", "wrap_help", "derive"] }
+fern = { version = "0.6.2", features = ["colored"] }
 hostname = "0.4.0"
+humantime = "2.1.0"
+log = "0.4.21"
 mlua = { version = "0.9.6", features = ["luajit52", "serialize", "vendored"] }
 rustyline = "14.0.0"
 serde = { version = "1.0.197", features = ["derive"] }
